-- Database schema for Glancy Backend
CREATE TABLE IF NOT EXISTS users (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  username VARCHAR(50) NOT NULL UNIQUE,
  password VARCHAR(255) NOT NULL,
  email VARCHAR(100) NOT NULL UNIQUE,
  avatar VARCHAR(255),
  phone VARCHAR(20) NOT NULL UNIQUE,
  deleted BOOLEAN NOT NULL DEFAULT FALSE,
  member BOOLEAN NOT NULL DEFAULT FALSE,
  createdAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6),
  updatedAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6) ON UPDATE CURRENT_TIMESTAMP(6),
  lastLoginAt DATETIME(6),
  loginToken VARCHAR(64)
);

CREATE TABLE IF NOT EXISTS user_profiles (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  user_id BIGINT NOT NULL UNIQUE,
  age INT,
  gender VARCHAR(255),
  job VARCHAR(255),
  interest VARCHAR(255),
  goal VARCHAR(255),
  CONSTRAINT fk_user_profile_user FOREIGN KEY (user_id) REFERENCES users (id)
);

CREATE TABLE IF NOT EXISTS user_preferences (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  user_id BIGINT NOT NULL UNIQUE,
  theme VARCHAR(20) NOT NULL,
  systemLanguage VARCHAR(20) NOT NULL,
  searchLanguage VARCHAR(20) NOT NULL,
  dictionaryModel VARCHAR(20) NOT NULL DEFAULT 'DEEPSEEK',
  CONSTRAINT fk_user_pref_user FOREIGN KEY (user_id) REFERENCES users (id)
);
CREATE TABLE IF NOT EXISTS search_records (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  user_id BIGINT NOT NULL,
  term VARCHAR(100) NOT NULL,
  language VARCHAR(10) NOT NULL,
  favorite BOOLEAN NOT NULL DEFAULT FALSE,
  deleted BOOLEAN NOT NULL DEFAULT FALSE,
  createdAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6),
  updatedAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6) ON UPDATE CURRENT_TIMESTAMP(6),
  CONSTRAINT fk_search_record_user FOREIGN KEY (user_id) REFERENCES users (id)
);

CREATE TABLE IF NOT EXISTS words (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  term VARCHAR(100) NOT NULL,
  language VARCHAR(10) NOT NULL,
  phonetic VARCHAR(100),
  example VARCHAR(255),
  markdown TEXT,
  deleted BOOLEAN NOT NULL DEFAULT FALSE,
  createdAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6),
  updatedAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6) ON UPDATE CURRENT_TIMESTAMP(6),
  CONSTRAINT uk_words_term_language UNIQUE (term, language)
);

CREATE TABLE IF NOT EXISTS word_definitions (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  word_id BIGINT NOT NULL,
  definition TEXT NOT NULL,
  CONSTRAINT fk_word_definition_word FOREIGN KEY (word_id) REFERENCES words (id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS word_variations (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  word_id BIGINT NOT NULL,
  variation TEXT NOT NULL,
  CONSTRAINT fk_word_variation_word FOREIGN KEY (word_id) REFERENCES words (id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS word_synonyms (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  word_id BIGINT NOT NULL,
  synonym TEXT NOT NULL,
  CONSTRAINT fk_word_synonym_word FOREIGN KEY (word_id) REFERENCES words (id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS word_antonyms (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  word_id BIGINT NOT NULL,
  antonym TEXT NOT NULL,
  CONSTRAINT fk_word_antonym_word FOREIGN KEY (word_id) REFERENCES words (id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS word_related_terms (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  word_id BIGINT NOT NULL,
  related_term TEXT NOT NULL,
  CONSTRAINT fk_word_related_word FOREIGN KEY (word_id) REFERENCES words (id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS word_phrases (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  word_id BIGINT NOT NULL,
  phrase TEXT NOT NULL,
  CONSTRAINT fk_word_phrase_word FOREIGN KEY (word_id) REFERENCES words (id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS contact_messages (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  name VARCHAR(100) NOT NULL,
  email VARCHAR(100) NOT NULL,
  message TEXT NOT NULL,
  createdAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS third_party_accounts (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  user_id BIGINT NOT NULL,
  provider VARCHAR(50) NOT NULL,
  externalId VARCHAR(100) NOT NULL,
  CONSTRAINT fk_third_party_user FOREIGN KEY (user_id) REFERENCES users (id)
);

CREATE TABLE IF NOT EXISTS login_devices (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  user_id BIGINT NOT NULL,
  deviceInfo VARCHAR(255) NOT NULL,
  loginTime DATETIME(6) NOT NULL,
  CONSTRAINT fk_login_device_user FOREIGN KEY (user_id) REFERENCES users (id)
);

CREATE TABLE IF NOT EXISTS tts_usage (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  user_id BIGINT NOT NULL,
  date DATE NOT NULL,
  count INT NOT NULL,
  deleted BOOLEAN NOT NULL DEFAULT FALSE,
  createdAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6),
  updatedAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6) ON UPDATE CURRENT_TIMESTAMP(6),
  CONSTRAINT uk_tts_usage_user_date UNIQUE (user_id, date),
  CONSTRAINT fk_tts_usage_user FOREIGN KEY (user_id) REFERENCES users (id)
);

-- Additional tables retained from legacy schema
CREATE TABLE IF NOT EXISTS alert_recipients (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  email VARCHAR(100) NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS traffic_records (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  path VARCHAR(100) NOT NULL,
  ip VARCHAR(45),
  userAgent VARCHAR(255),
  createdAt DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6)
);

CREATE TABLE IF NOT EXISTS system_parameters (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  name VARCHAR(50) NOT NULL UNIQUE,
  value VARCHAR(255) NOT NULL
);
