%% FigJam: https://www.figma.com/file/glancy-sdd-figjam?type=whiteboard&node-id=230-80#ERCore
%% 摘要：Glancy MVP 核心实体（账户、画像、查词、结果、导出、订阅、配额、审计）。
erDiagram
    USERS {
        uuid user_id PK
        text email
        text status
        text persona
        timestamptz created_at
    }
    USER_PROFILES {
        uuid profile_id PK
        uuid user_id FK
        jsonb goals
        jsonb style_tags
        timestamptz updated_at
    }
    USER_PREFERENCES {
        uuid preference_id PK
        uuid user_id FK
        text theme
        text search_language
        timestamptz updated_at
    }
    PLANS {
        text plan_id PK
        text tier
        int lookup_limit
        int regen_limit
        int history_days
    }
    SUBSCRIPTIONS {
        uuid subscription_id PK
        uuid user_id FK
        text plan_id FK
        text status
        timestamptz start_at
        timestamptz expire_at
        boolean auto_renew
        timestamptz last_sync_at
    }
    LOOKUPS {
        uuid lookup_id PK
        uuid user_id FK
        text subject_id
        text src_lang
        text dst_lang
        text status
        text idempotency_key
        timestamptz started_at
        timestamptz finished_at
    }
    RESULTS {
        uuid result_id PK
        uuid lookup_id FK
        text schema_version
        jsonb payload
        boolean degraded
        int tokens_in
        int tokens_out
    }
    REGENERATIONS {
        uuid regen_id PK
        uuid lookup_id FK
        uuid user_id FK
        uuid prev_result_id FK
        text reason
        timestamptz created_at
    }
    EXPORT_JOBS {
        uuid export_id PK
        uuid user_id FK
        text status
        jsonb filters
        text format
        timestamptz requested_at
        timestamptz completed_at
    }
    EXPORT_ARTIFACTS {
        uuid artifact_id PK
        uuid export_id FK
        text storage_key
        text signed_url
        timestamptz ttl_expires_at
    }
    QUOTA_DAILY {
        text subject_id PK
        uuid user_id FK
        date quota_date_local
        text time_zone
        int lookup_count
        int regen_count
    }
    AUDIT_EVENTS {
        uuid event_id PK
        text actor_type
        text actor_id
        text action
        text target_type
        text target_id
        jsonb meta
        timestamptz created_at
    }

    USERS ||--|| USER_PROFILES : "1:1"
    USERS ||--|| USER_PREFERENCES : "1:1"
    USERS ||--o{ SUBSCRIPTIONS : "1:many"
    PLANS ||--o{ SUBSCRIPTIONS : "1:many"
    USERS ||--o{ LOOKUPS : "1:many"
    LOOKUPS ||--|| RESULTS : "1:1"
    LOOKUPS ||--o{ REGENERATIONS : "1:many"
    USERS ||--o{ EXPORT_JOBS : "1:many"
    EXPORT_JOBS ||--o{ EXPORT_ARTIFACTS : "1:many"
    USERS ||--o{ QUOTA_DAILY : "1:many"
    USERS ||--o{ AUDIT_EVENTS : "1:many"
    SUBSCRIPTIONS ||--o{ AUDIT_EVENTS : "entitlement events"
    EXPORT_JOBS ||--o{ AUDIT_EVENTS : "download events"
